# mtchat

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml
mtchat-rust/: .dockerignore  Cargo.toml  README.md
mtchat-rust/config/: default.toml  production.toml
mtchat-rust/docker/: Dockerfile
mtchat-rust/migrations/: 20240101000001_create_tenants.sql  20240101000002_create_employees.sql  20240101000003_create_dialogs.sql  20240101000004_create_participants.sql  20240101000005_create_messages.sql  20240101000006_create_message_edit_history.sql  20240101000007_create_attachments.sql  20250203000001_update_dialogs_v3.sql  20250203000002_update_participants_v3.sql  20250203000003_create_access_scopes.sql  20250203000004_add_message_reply.sql  20250203000005_remove_employee_fk.sql  20250203000006_drop_legacy_tables.sql  20250204000001_update_attachments_v3.sql  20250204000002_add_unread_count.sql  20250205000001_add_participant_profile.sql  20250206000001_add_is_archived.sql  20250206000002_add_system_messages.sql  20250207000001_add_is_pinned.sql  20250210000001_add_object_url.sql  20250210000002_remove_dialog_object_unique.sql  20250316000001_add_trgm_indexes.sql  20260316000002_uuid_to_string.sql  20260316000003_tenant_to_scope_level0.sql  20260701000001_add_dialog_meta.sql
mtchat-rust/src/: lib.rs  main.rs  ws.rs
mtchat-rust/src/api/: dialogs.rs  health.rs  management.rs  messages.rs  mod.rs  participants.rs  upload.rs  ws_handler.rs
mtchat-rust/src/config/: cors.rs  database.rs  jwt.rs  mod.rs  rate_limit.rs
mtchat-rust/src/domain/: access_scope.rs  attachment.rs  dialog.rs  html_sanitize.rs  message.rs  mod.rs  participant.rs  system_messages.rs  validation.rs
mtchat-rust/src/jobs/: handlers.rs  mod.rs  producer.rs  types.rs  worker.rs
mtchat-rust/src/middleware/: admin_auth.rs  jwt_auth.rs  mod.rs  (+2 more)
mtchat-rust/tests/: api_types_test.rs  chat_api_test.rs  domain_test.rs  management_api_test.rs  migrations_test.rs  webhook_events_test.rs
(+243 files in other folders)
