[package]
name = "multitenancy-chat-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["MultitenancyChat Team"]
description = "B2B/B2C Chat Platform Backend"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "util", "compression-gzip"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Redis
fred = { version = "10", features = ["subscriber-client"] }

# Job Queue
apalis = { version = "0.6", features = ["retry", "timeout", "tracing", "limit"] }
apalis-redis = "0.6"
apalis-cron = "0.6"

# S3
aws-sdk-s3 = "1.68"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error tracking
sentry = { version = "0.35", features = ["tracing", "tower", "tower-http"] }

# Configuration
dotenvy = "0.15"

# Error handling
thiserror = "2.0"

# Utilities
once_cell = "1.20"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"

# HTTP client for webhooks
reqwest = { version = "0.12", features = ["json"] }

# HTML sanitization
ammonia = "4.1"

[dev-dependencies]
tokio-test = "0.4"
fake = { version = "3.0", features = ["derive", "uuid", "chrono"] }
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true
